JBT-1020 - Product page design corrections  - Added CSS fixes to the table view for <a> element ellispis  - Aligned the '^' header icons  - Modified the action icon sizes  - Added the ability to pass a 'noFilterResults' label

--- a/src/directives/jf_tabs/jf_tabs.less
+++ b/src/directives/jf_tabs/jf_tabs.less
@@ -62,6 +62,10 @@
 
     &.action-expand {
       width: 50px;
+      float: right;
+      .dropdown{
+        z-index: 999999;
+      }
     }
 
     > a {
